data/test/method_as_function/positive/3003.js
const axios = require('axios');
axios.delete('https://petstore.swagger.io/v2/pets/42');