data/test/method_as_function/negative/3005.js
const axios = require('axios');
axios.delete(`https://petstore.swagger.io/v2/pets/4/2`);